# labster

./: README.md  compose.yaml  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: backend.yml  frontend.yml  rust.yml
backend/: .env  .env.test  Cargo.toml  Dockerfile  README.md  justfile
backend/.cargo/: config.toml
backend/cli/: Cargo.toml  README.md
backend/cli/src/: lib.rs
backend/config/: Cargo.toml  README.md
backend/config/src/: lib.rs
backend/db/: Cargo.toml  README.md  seeds.sql
backend/db/.sqlx/: query-027d6f29e351d998134d3b7f3183d52c2c5db60d414da85417e0ff95b41f9209.json  query-0f67d45000190f853254ee2e4fcf513c8cd2e04d4177ba4161b9bd369978689f.json  query-124f0c462232a21e4ac77e9f25691c46e7790b15ca7f53413b70dfd28747b9c3.json  query-13254b9b47452c22cf7c50446b7c87afdabc62aaabe682353d91024a7b0993ca.json  query-161148dbc2bee53ea33710fbf03df1727a9e1191e0d63986cb57e9c16a05b83c.json  query-190488053a1dad746dd4b2b8a9057ac8a6c9e751c061e3956ecef11410ece483.json  query-1efff1530059a28d4c16d7736cacaa16075fcc592bb0dcc6730682c81ec9dab6.json  query-28442529dad381116e559e00a6f97330051448437f1c40f0c64c9bf26dec6d6b.json  query-2e382f99a8aa2a0d84d213747a3b030093e5923cd59698496da2d3dc974626e5.json  query-39c9d2ab46086cfb20cd29b2ec06771fdb87db2d9569387895f7fea60f923a8b.json  query-44d99c82a9ff9688bec8c827cfd9376ea4a4771e5068cf94e87ee1555ed0ecab.json  query-4c5828582d88a3c6458725b0f72db6adb6eccba9cd628819fc12d2be548267aa.json  query-507e9e7c6c6cf469cad1a3b18e9d3f1568238bbbb5a886b280b64f38d8602591.json  query-5a05a05a75721a15986fc928c4c1f65e99127c79cabc2ff89903f820e0119a6c.json  query-5e06adb975ed32fe29f844b0ce9d9767d764399ec2f91f760b26a4988c79ff2a.json  query-638eb678e77d2ec3787c2bf3c869fd1b89f2618e8ca0d91dd1cdb1c8557d85b4.json  query-8023dfed6dda9e05ae554e53c7a8ed60e12dfdc5c827cd1352c188712867cd7f.json  query-81ab6646549792e1c3617f0147bb3d4dec1b8e89e6cf4d60857a7aea359e750e.json  query-83475ac529589b82f8e6fb536b463deb7872b75b1a2bc800b8d4ebd91024a005.json  query-85a27f6eaf8c50a16a082184bc8f412c0391ef26727314c465cbd7a1cf7e13a0.json  query-895b20c8852172f7ed2b03c5ec6a9439441bc349e24a7f015c30870a4dea429e.json  query-8af66f6d4d7fb2abe7fee317a43d1eb0f7636fb16496c86b099bc9cf0c36a5fb.json  query-97d8a53f5af3cac45e78c4d0e4166e0d5a25bf019d080d05b421b2a969362293.json  query-ab4992a61a6f976b8e92cbc36885385399bebc4156686e70486477ba7764327a.json  query-bd7ed14bcfe4b13ec459321a74df9b2e0171561c23918cfb8a7c279edce43fb7.json  query-bec1f285275de4006fd56ffe4af9728c6dcbbb7c01b3c5459a642ab041719eba.json  query-c1aca4e09d1a64ae19fe97c40d1424fa6e67c64cb593b55fc56a0cb7ec60a9c0.json  query-c39298d1d85cdbf82441c90e37ba08afc7c965977c1c592f86990db031967463.json  query-c983da5d488e4cf5535062b169df5f163bfa2ebe80d476e257fa3f343268948d.json  query-ceb8766f98bd9f51bc52590e9339cb80b12b595603eb7bf58b62c820f93f3e71.json  query-e11f2174009449fc7aef2ee9325a39e223c1011897c53264abd2cd7447ed742f.json  query-e82d842ce2ffc0b38fb7e351dc4100a61086065fce3f2c48d82a1f5df38f827e.json  query-ea5ed64f73289679300101b9ee0b99b64356ed57636d11846cbb4069698c2b87.json  query-ed9a39c0469c30ca2cdc3dc83cc23acc63902aba188b14a8a2af34d7b124881e.json  query-f964443831d0488e4e8d7f748c47e58839d0c3eb6bdc25038b710c317d58b97c.json
backend/macros/: Cargo.toml  README.md
backend/web/: Cargo.toml  README.md
backend/web/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
backend/web/src/controllers/: collections.rs  mod.rs  sequences.rs
backend/web/src/test_helpers/: mod.rs
backend/web/tests/api/: collections_test.rs  greeting_test.rs  main.rs  sequences_test.rs
frontend/: Dockerfile  biome.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: root.tsx  routes.ts
frontend/src/: App.tsx  app.tsx  main.tsx  routeTree.gen.ts
monitoring/prometheus/: prometheus.yml
testing/: sequences.hurl
(+50 files in other folders)
