[package]
name = "labster-web"
version = "0.0.1"
edition = "2024"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = ["dep:serde_json", "dep:tower", "dep:hyper", "dep:labster-macros"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
labster-config = { path = "../config" }
labster-db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
uuid = { version = "1.6", features = ["serde"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tower = { version = "0.5", features = ["util"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
validator = "0.20"
labster-macros = { path = "../macros", optional = true }
chrono = { version = "0.4.40", features = ["serde"] }
metrics-exporter-prometheus = { version = "0.18.1", features = ["http-listener"]}
metrics = "0.24.2"
utoipa = { version = "5.4.0", features = ["axum_extras", "macros"] }

[dev-dependencies]
fake = "4.4"
googletest = "0.14"
labster-db = { path = "../db", features = ["test-helpers"] }
labster-web = { path = ".", features = ["test-helpers"] }
